name:                YesodWebsockets 
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Ace
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable Dialectic
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:     base               >=4.6 && <4.7
                    ,wai

                    ,yesod-core         >= 1.2.7
                    ,yesod-websockets   >= 0.1.0.0
                    ,wai-websockets     >= 2.1.0.2
                    ,websockets         >= 0.8.2.3
                    ,text               >= 0.11.3.1
                    ,transformers       >= 0.3.0.0
                    ,async              >= 2.0.1.5
                    ,monad-control      >= 0.3.3.0
                    ,conduit            >= 1.1.5
                    ,stm-lifted         >= 0.1.0.0
                    ,time               >= 1.4.0.1

  -- hs-source-dirs:      
  default-language:    Haskell2010
